# RAG

./: Introduction_to_RAG.ipynb  main.py  pyproject.toml  requirements.txt
0-DataIngestionParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb
0-DataIngestionParsing/data/structured_files/: inventory.xlsx
0-DataIngestionParsing/data/text_files/: Agents_intro.txt  RAG_intro.txt
1-VectorEmbeddingsAndDatabases/: embeddings.ipynb
2-Vector Stores/: 1-chromadb.ipynb  VectorStoreVs VectorDatabase.ipynb
2-Vector Stores/chroma_db/: chroma.sqlite3
